less:  Prevent zalgo overflowing post
close #575

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -24,6 +24,7 @@ article {
 	}
 	blockquote {
 		min-width: 15em;
+		overflow-y: hidden;
 	}
 	audio {
 		width: 300px;
